--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@ body{
     width:420px;
     padding:20px 20px;
     overflow: auto;
-    max-height: 100%;
+    height: 100%;
     /*background: rgba(255,255,255,0.5);*/
 }
 #controls>a{
@@ -256,7 +256,7 @@ span.modal-close{
     font-size: 15px;
 }
 
-#extraSpace{
+.extraSpace{
     display: inline-block;
     width:100%;
     height:15px;
@@ -283,4 +283,14 @@ span.modal-close{
 
 .paddingBottom{
     margin-bottom: 20px;
+}
+
+#svgViewer{
+    max-width: 100%;
+    max-height: 300px;
+    float: right;
+}
+svg{
+    width: 100%;
+    height: 100%;
 }
