--- a/css/main.css
+++ b/css/main.css
@@ -274,9 +274,14 @@ span.modal-close{
 }
 
 #svgViewer{
-    max-width: 100%;
-    max-height: 300px;
-    float: right;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 3;
+    top:0px;
+    right:0;
+    background: white;
+    display: none;
 }
 svg{
     width: 100%;
