--- a/css/nav.css
+++ b/css/nav.css
@@ -73,3 +73,69 @@ img{
 #logo{
     padding: 5px 50px 5px 30px;
 }
+
+
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu li {
+    height: 32px;
+}
+
+.dropdown-submenu a{
+    height: 32px;
+    padding-bottom: 16px;
+    color: #e1e4e7!important;
+    white-space: normal;
+}
+
+.dropdown-submenu a.disabled{
+    color: #999999!important;
+}
+
+.dropdown-submenu li:hover{
+    background-color: #aaa!important;
+}
+
+.dropdown-submenu li.noHighlight:hover{
+    background-color: #3b3b3b!important;
+}
+
+.dropdown-submenu li>a{
+    border-radius: 0!important;;
+    border-top-left-radius: 0!important;;
+    border-bottom-left-radius: 0!important;;
+}
+.dropdown-submenu li.noHighlight>a:hover{
+    background-color: #3b3b3b!important;
+}
+
+.dropdown-submenu>.dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: 0;
+    margin-left: -1px;
+    border-radius: 0;
+    /*-webkit-border-radius: 0 6px 6px 6px;*/
+    /*-moz-border-radius: 0 6px 6px;*/
+    /*border-radius: 0 6px 6px 6px;*/
+    background-color: #3b3b3b;
+}
+
+.dropdown-submenu:hover>.dropdown-menu {
+    display: block;
+}
+
+.dropdown-submenu.pull-left {
+    float: none;
+}
+
+.dropdown-submenu.pull-left>.dropdown-menu {
+    left: -100%;
+    margin-left: 10px;
+    -webkit-border-radius: 6px 0 6px 6px;
+    -moz-border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 6px 6px;
+}
+
