--- a/css/main.css
+++ b/css/main.css
@@ -11,13 +11,13 @@ body{
     padding:0;
     margin:0;
     overflow: hidden;
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none;   /* Chrome/Safari/Opera */
-    -khtml-user-select: none;    /* Konqueror */
-    -moz-user-select: none;      /* Firefox */
-    -ms-user-select: none;       /* Internet Explorer/Edge */
-    user-select: none;           /* Non-prefixed version, currently
-                                  not supported by any browser */
+    /*-webkit-touch-callout: none; !* iOS Safari *!*/
+    /*-webkit-user-select: none;   !* Chrome/Safari/Opera *!*/
+    /*-khtml-user-select: none;    !* Konqueror *!*/
+    /*-moz-user-select: none;      !* Firefox *!*/
+    /*-ms-user-select: none;       !* Internet Explorer/Edge *!*/
+    /*user-select: none;           !* Non-prefixed version, currently*/
+                                 /*not supported by any browser *!*/
 }
 
 
