--- a/css/main.css
+++ b/css/main.css
@@ -319,3 +319,9 @@ svg{
 #stepForward{
     margin-left: 13px;
 }
+
+#creasePercent{
+    margin-bottom: 0;
+    margin-top:9px;
+    color: white;
+}
