--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ html{
     height:100%;
     padding:0;
     overflow: hidden;
+    min-width: 1080px;
 }
 
 body{
@@ -11,6 +12,7 @@ body{
     padding:0;
     margin:0;
     overflow: hidden;
+    min-width: 1080px;
     /*-webkit-touch-callout: none; !* iOS Safari *!*/
     /*-webkit-user-select: none;   !* Chrome/Safari/Opera *!*/
     /*-khtml-user-select: none;    !* Konqueror *!*/
