--- a/css/main.css
+++ b/css/main.css
@@ -511,3 +511,8 @@ a.seeMore.closed>.fui-triangle-down{
     width: 100%;
     height: 100%;
 }
+
+object{
+    width:100%;
+    margin-bottom: 10px;
+}
