--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
 html{
     width:100%;
     height:100%;
-    padding:0;
     overflow: hidden;
+    padding:0;
+    margin:0;
     /*min-width: 1025px;*/
 }
 
