--- a/cc/main.css
+++ b/cc/main.css
@@ -19,10 +19,19 @@ body{
 }
 
 #threeContainer {
-    width:100%;
+    width:50%;
     height:100%;
     padding:0;
     position: absolute;
     top: 0;
     left: 0;
+}
+
+#foldViewer {
+    width:50%;
+    height:100%;
+    padding:0;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
