--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ p{
 #controlsBottom{
     width:100%;
     min-width: 775px;
-    max-width: 1000px;
+    max-width: 850px;
     margin: auto;
     position: absolute;
     bottom: 0;
@@ -68,14 +68,19 @@ p{
     display: inline-block;
 }
 #bottomSliderContainer{
+    text-align: center;
     position: absolute;
     right:350px;
     left:250px;
-        margin-top: 18px;
+        margin-top: 20px;
+}
+#bottomSliderContainer>span{
+    font-size: 14px;
 }
 #creasePercentBottom{
     width: 100%;
-    margin-top: 20px;
+    margin-top: 14px;
+    margin-bottom: 5px;
 }
 #creasePercentBottom>.flat-slider{
     width: 100%;
@@ -92,17 +97,19 @@ p{
 }
 #flatIndicator{
     left: -50px;
+        top: -15px;
 }
 .sliderEndPt>img{
     width:100%;
 }
 #foldedIndicator{
     right: -50px;
+        top: -15px;
 }
-.sliderEndPt>.fui-triangle-up{
+.sliderEndPt>.fui-triangle-down{
     display: block;
     color: #34495e;
-    margin-top: 10px;
+    margin-top: 0px;
 }
 .sliderEndPtLabel{
     color: #34495e;
@@ -128,7 +135,8 @@ p{
     /*border: 1px solid #34495e;*/
 }
 .bigToggle>div{
-    background: #e8e8e8;
+    border: 2px solid #34495e;
+    background: white;
     height:70px;
     overflow: hidden;
     border-radius: 10px;
@@ -144,7 +152,15 @@ p{
     color: #34495e;
 }
 .bigToggle div.active{
-    background: #bdc3c7;
+    background: #e8e8e8;
+}
+.bigToggle .separator{
+        width: 2px;
+    height: 68px;
+    position: absolute;
+    background: #34495e;
+    padding: 0;
+    margin: 0;
 }
 .bigToggle img{
     display: inline-block;
