--- a/css/main.css
+++ b/css/main.css
@@ -727,3 +727,36 @@ object{
     margin-top: 8px;
     margin-left: 20px;
 }
+
+#feedbackNotification {
+	position: absolute;
+    z-index: 10;
+    right: 130px;
+    top: 0;
+    padding: 5px 10px 4px;
+    font-size: 15px;
+    font-weight: 900;
+    background: #ffcd50;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+#feedbackNotification>span {
+	max-width: 150px;
+    text-align: center;
+    display: inline-block;
+	line-height: 22px;
+}
+
+@media only screen and (max-width: 1055px) {
+	#feedbackNotification {
+	  display: none;
+	}
+}
+
+@media only screen and (max-width: 890px) {
+	#feedback {
+	  display: none;
+	}
+}
