--- a/css/main.css
+++ b/css/main.css
@@ -736,7 +736,7 @@ object{
     padding: 5px 10px 4px;
     font-size: 15px;
     font-weight: 900;
-    background: #ffcd50;
+    background: #ff64bf;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
