--- a/css/main.css
+++ b/css/main.css
@@ -824,6 +824,25 @@ object{
     line-height:1.05;
 }
 
+#bottomSliderContainer .kfButtonGroup{
+    display:flex;
+    justify-content:flex-start;
+    gap:0px;
+    padding:0 6px 0 0;
+}
+
+#bottomSliderContainer .kfButton{
+    flex:0 0 16px;
+    width:10px;
+    padding:1px 0;
+    font-size:15px;
+    line-height:1;
+    border:1px solid #000;
+    background:#b7b7b7;
+    border-radius:1px;
+    cursor:pointer;
+}
+
 #bottomSliderContainer .mainFoldSlider,
 #bottomSliderContainer .keyframeSlider{
     position:relative;
