--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,19 @@
-html{
-    width:100%;
+html {
+    width: 100%;
     min-width: 775px;
-    height:100%;
+    height: 100%;
     overflow: hidden;
-    padding:0;
-    margin:0;
+    padding: 0;
+    margin: 0;
     /*min-width: 1025px;*/
 }
 
-body{
-    width:100%;
+body {
+    width: 100%;
     min-width: 775px;
-    height:100%;
-    padding:0;
-    margin:0;
+    height: 100%;
+    padding: 0;
+    margin: 0;
     overflow: hidden;
     /*min-width: 1025px;*/
     /*-webkit-touch-callout: none; !* iOS Safari *!*/
@@ -22,14 +22,14 @@ body{
     /*-moz-user-select: none;      !* Firefox *!*/
     /*-ms-user-select: none;       !* Internet Explorer/Edge *!*/
     /*user-select: none;           !* Non-prefixed version, currently*/
-                                 /*not supported by any browser *!*/
+    /*not supported by any browser *!*/
 }
 
-p{
+p {
     margin: 15px 0 15px 0;
 }
 
-#basicUI{
+#basicUI {
     position: absolute;
     top: 53px;
     font-size: 14px;
@@ -39,11 +39,11 @@ p{
     width: 400px;
     padding: 20px 20px;
 }
-#showAdvancedOptions{
+#showAdvancedOptions {
     color: #34495e;
     font-weight: 900;
 }
-#hideAdvancedOptions{
+#hideAdvancedOptions {
     font-size: 14px;
     color: #34495e;
     font-weight: 900;
@@ -52,8 +52,8 @@ p{
     display: inline-block;
 }
 
-#controlsBottom{
-    width:100%;
+#controlsBottom {
+    width: 100%;
     min-width: 775px;
     max-width: 850px;
     margin: auto;
@@ -61,33 +61,33 @@ p{
     bottom: 0;
     right: 0;
     left: 0;
-    height:110px;
+    height: 110px;
     font-weight: 900;
 }
-#controlsBottom>div{
+#controlsBottom > div {
     display: inline-block;
 }
-#bottomSliderContainer{
+#bottomSliderContainer {
     text-align: center;
     position: absolute;
-    right:350px;
-    left:250px;
-        margin-top: 20px;
+    right: 350px;
+    left: 250px;
+    margin-top: 20px;
 }
-#bottomSliderContainer>span{
+#bottomSliderContainer > span {
     font-size: 14px;
 }
-#creasePercentBottom{
+#creasePercentBottom {
     width: 100%;
     margin-top: 14px;
     margin-bottom: 5px;
 }
-#creasePercentBottom>.flat-slider{
+#creasePercentBottom > .flat-slider {
     width: 100%;
     margin: 0;
     background: #e8e8e8;
 }
-.sliderEndPt{
+.sliderEndPt {
     text-align: center;
     width: 100px;
     position: absolute;
@@ -95,167 +95,170 @@ p{
     color: #34495e;
     line-height: 18px;
 }
-#flatIndicator{
+#flatIndicator {
     left: -50px;
-        top: -15px;
+    top: -15px;
 }
-.sliderEndPt>img{
-    width:100%;
+.sliderEndPt > img {
+    width: 100%;
 }
-#foldedIndicator{
+#foldedIndicator {
     right: -50px;
-        top: -15px;
+    top: -15px;
 }
-.sliderEndPt>.fui-triangle-down{
+.sliderEndPt > .fui-triangle-down {
     display: block;
     color: #34495e;
     margin-top: 0px;
 }
-.sliderEndPtLabel{
+.sliderEndPtLabel {
     color: #34495e;
     display: block;
     /*margin-top: 30px;*/
 }
 
-#viewToggle{
+#viewToggle {
     left: 30px;
 }
-#controlsToggle{
+#controlsToggle {
     right: 140px;
 }
-.preserveAspect{
+.preserveAspect {
     width: auto;
 }
-.bigToggle{
-    height:90px;
-    width:140px;
+.bigToggle {
+    height: 90px;
+    width: 140px;
     text-align: center;
     position: absolute;
-    font-size:14px;
+    font-size: 14px;
     /*border: 1px solid #34495e;*/
 }
-.bigToggle>div{
+.bigToggle > div {
     border: 2px solid #34495e;
     background: white;
-    height:70px;
+    height: 70px;
     overflow: hidden;
     border-radius: 10px;
     margin-bottom: 5px;
 }
-.bigToggle>div div{
+.bigToggle > div div {
     padding: 5px;
-    width:50%;
+    width: 50%;
     height: 100%;
     display: inline-block;
     text-align: center;
     font-size: 12px;
     color: #34495e;
 }
-.bigToggle div.active{
+.bigToggle div.active {
     background: #e8e8e8;
 }
-.bigToggle .separator{
-        width: 2px;
+.bigToggle .separator {
+    width: 2px;
     height: 68px;
     position: absolute;
     background: #34495e;
     padding: 0;
     margin: 0;
 }
-.bigToggle img{
+.bigToggle img {
     display: inline-block;
-    height:40px;
+    height: 40px;
 }
-.bigToggle span{
+.bigToggle span {
     display: block;
-    width:100%;
+    width: 100%;
 }
 
-#resetBottom{
+#resetBottom {
     position: absolute;
-    right:30px;
+    right: 30px;
     top: 13px;
     color: #34495e;
     font-weight: 900;
 }
 
-
-#controls{
+#controls {
     position: absolute;
-    top:53px;
+    top: 53px;
     bottom: 0;
-    right:-430px;
-    width:430px;
-    padding:20px 20px;
+    right: -430px;
+    width: 430px;
+    padding: 20px 20px;
     overflow: auto;
-    background:rgba(10,10,10,0.1);
+    background: rgba(10, 10, 10, 0.1);
 }
-#controls>a{
+#controls > a {
     /*float:right;*/
 }
-#controlsLeft{
+#controlsLeft {
     position: absolute;
-    bottom:0;
-    left:-420px;
+    bottom: 0;
+    left: -420px;
     width: 420px;
-    top:53px;
-    padding:20px 20px;
+    top: 53px;
+    padding: 20px 20px;
     max-height: 100%;
     overflow: auto;
 }
-#controlsLeft .radio{
+#controlsLeft .radio {
     width: 240px;
 }
 
-.sliderInput{
-    float:right;
+.sliderInput {
+    float: right;
     display: inline-block;
-    margin-bottom:15px;
+    margin-bottom: 15px;
 }
-.sliderContainer{
+.sliderContainer {
     display: block;
-    margin-bottom:15px;
+    margin-bottom: 15px;
 }
 
-.indent{
-    padding-left:20px;
+.indent {
+    padding-left: 20px;
 }
-.doubleIndent{
-    padding-left:40px;
+.doubleIndent {
+    padding-left: 40px;
 }
 
-#gpuMathCanvas{
+#gpuMathCanvas {
     display: none;
 }
 
-a, a:hover, a:visited, a:focus{
-    color:#ec008b;
+a,
+a:hover,
+a:visited,
+a:focus {
+    color: #ec008b;
 }
 
-a.btn:visited, a.btn:focus{
+a.btn:visited,
+a.btn:focus {
     color: white;
 }
 
-button{
+button {
     border: 0;
     outline: none;
 }
 
-.editable{
-    color:#34495e;
+.editable {
+    color: #34495e;
     height: 42px;
     display: inline-block;
     line-height: 42px;
     width: 70px;
     text-overflow: ellipsis;
     overflow: hidden;
-    white-space:nowrap
+    white-space: nowrap;
 }
-.editable:hover{
-    color:#34495e;
+.editable:hover {
+    color: #34495e;
     cursor: text;
 }
-.editableInput{
+.editableInput {
     display: none;
     outline: grey;
     padding: 5px 7px;
@@ -264,7 +267,7 @@ button{
 }
 .editableInput:focus {
     outline: grey;
-    border:none;
+    border: none;
 }
 
 input.form-control {
@@ -272,29 +275,28 @@ input.form-control {
     display: inline-block;
 }
 
-.radioSlider{
+.radioSlider {
     display: inline-block;
-    float:right;
+    float: right;
 }
 
-.form-control, .select2-search input[type=text] {
+.form-control,
+.select2-search input[type='text'] {
     height: 35px;
 }
 
-.floatRight{
-    float:right;
+.floatRight {
+    float: right;
 }
 
 #threeContainer {
-    width:100%;
-    height:100%;
-    padding:0;
+    width: 100%;
+    height: 100%;
+    padding: 0;
     position: absolute;
     top: 0px;
     left: 0px;
 }
-
-
 
 .slider.slider-horizontal {
     width: 200px;
@@ -311,52 +313,53 @@ input.form-control {
 
 .flat-slider.ui-corner-all,
 .flat-slider .ui-corner-all {
-  border-radius: 0;
+    border-radius: 0;
 }
 
 .flat-slider.ui-slider {
-  border: 0;
-  background: #ffffff;
-  border-radius: 7px;
+    border: 0;
+    background: #ffffff;
+    border-radius: 7px;
 }
 
 .flat-slider.ui-slider-horizontal {
-  height: 6px;
+    height: 6px;
 }
 
 .flat-slider.ui-slider-vertical {
-  width: 6px;
+    width: 6px;
 }
 
 .flat-slider .ui-slider-handle {
-  width: 20px;
-  height: 20px;
-  background: #666;
-  border-radius: 50%;
-  border: none;
-  cursor: pointer;
+    width: 20px;
+    height: 20px;
+    background: #666;
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
 }
 
 .flat-slider.ui-slider-horizontal .ui-slider-handle {
-  top: 50%;
-  margin-top: -10px;
+    top: 50%;
+    margin-top: -10px;
     opacity: 0.8;
 }
 
 .flat-slider.ui-slider-vertical .ui-slider-handle {
-  left: 50%;
-  margin-left: -10px;
+    left: 50%;
+    margin-left: -10px;
     opacity: 0.8;
 }
 
 .flat-slider .ui-slider-handle:hover {
-  opacity: 0.7;
+    opacity: 0.7;
 }
 
-.flat-slider .ui-slider-handle:focus { outline: none; }
+.flat-slider .ui-slider-handle:focus {
+    outline: none;
+}
 
-
-.flat-slider{
+.flat-slider {
     vertical-align: middle;
     display: inline-block;
     width: 130px;
@@ -365,213 +368,225 @@ input.form-control {
     /*padding: 4px 0;*/
 }
 
-.modal-content{
+.modal-content {
     border-radius: 0;
 }
-.modal-body{
+.modal-body {
     padding: 20px 35px;
 }
 
-span.modal-close{
+span.modal-close {
     display: none;
 }
-.titleSpan{
+.titleSpan {
     display: inline-block;
-    width:100%;
-    margin-top:15px;
+    width: 100%;
+    margin-top: 15px;
 }
-.form-control:focus{
+.form-control:focus {
     border-color: #666;
 }
 
-.checkbox input.custom-checkbox[type="checkbox"]:checked + .icons .icon-checked, .radio input.custom-checkbox[type="checkbox"]:checked + .icons .icon-checked, .checkbox input.custom-radio[type="radio"]:checked + .icons .icon-checked, .radio input.custom-radio[type="radio"]:checked + .icons .icon-checked {
+.checkbox input.custom-checkbox[type='checkbox']:checked + .icons .icon-checked,
+.radio input.custom-checkbox[type='checkbox']:checked + .icons .icon-checked,
+.checkbox input.custom-radio[type='radio']:checked + .icons .icon-checked,
+.radio input.custom-radio[type='radio']:checked + .icons .icon-checked {
     color: #666;
 }
-.checkbox .icon-checked, .radio .icon-checked, .checkbox .icon-unchecked, .radio .icon-unchecked {
+.checkbox .icon-checked,
+.radio .icon-checked,
+.checkbox .icon-unchecked,
+.radio .icon-unchecked {
     color: #bdc3c7;
 }
 
-.radio .icon-checked{
+.radio .icon-checked {
     transition-duration: 0s;
 }
 
-.radio .icon-unchecked{
+.radio .icon-unchecked {
     transition-duration: 0s;
 }
 
-.sliderInput>.flat-slider{
-   width: 90px;
+.sliderInput > .flat-slider {
+    width: 90px;
 }
 
-.label-slider{
+.label-slider {
     font-size: 15px;
 }
 
-.extraSpace{
+.extraSpace {
     display: inline-block;
-    width:100%;
-    height:15px;
+    width: 100%;
+    height: 15px;
 }
 
-.flipped
-{
+.flipped {
     direction: rtl;
 }
-.flipped>div
-{
+.flipped > div {
     direction: ltr;
 }
 
-.paddingBottom{
+.paddingBottom {
     margin-bottom: 20px;
 }
 
-#svgViewer{
+#svgViewer {
     width: 100%;
     height: 100%;
     position: absolute;
     z-index: 3;
-    top:0px;
-    right:0;
+    top: 0px;
+    right: 0;
     background: white;
     display: none;
     padding-top: 56px;
 }
-svg{
+svg {
     width: 100%;
     height: 100%;
 }
 
-.hexVal{
-    border-width:4px;
+.hexVal {
+    border-width: 4px;
 }
 
-#warningMessage{
+#warningMessage {
     padding: 30px 0;
     text-align: center;
     margin: 0 18px;
 }
 
-.about{
+.about {
     margin-right: 10px;
-    color: #34495e!important;
+    color: #34495e !important;
     font-size: 18px;
     line-height: 18px;
 }
-#controls .about, #basicUI .about{
+#controls .about,
+#basicUI .about {
     position: absolute;
     line-height: 1.7;
     margin-top: 2px;
-    right:5px;
+    right: 5px;
 }
 
-#aboutError{
-    line-height: 2.0
+#aboutError {
+    line-height: 2;
 }
-#aboutStiffness{
+#aboutStiffness {
     line-height: 28px;
 }
 
-#aboutUserInteraction{
-    margin-top: 10px!important;
-    line-height: 21px!important;
+#aboutUserInteraction {
+    margin-top: 10px !important;
+    line-height: 21px !important;
 }
 
-#aboutVR{
-        float: none;
+#aboutVR {
+    float: none;
     margin-left: 40px;
     position: absolute;
     line-height: 1.7;
     margin-top: 2px;
 }
 
-#start, #stepForwardOptions{
+#start,
+#stepForwardOptions {
     display: none;
 }
-#stepForwardOptions{
+#stepForwardOptions {
     width: 100%;
 }
-#reset{
+#reset {
     margin-left: 20px;
 }
 
-
-#creasePercentNav{
+#creasePercentNav {
     margin-bottom: 0;
-    margin-top:12px;
+    margin-top: 12px;
     color: white;
     display: none;
 }
 
-.bigLabel{
-    font-size:16px;
+.bigLabel {
+    font-size: 16px;
     margin-top: 20px;
 }
-.checkbox.bigLabel .icons, .radio .icons {
+.checkbox.bigLabel .icons,
+.radio .icons {
     top: 2px;
 }
 
-.smallTxt{
+.smallTxt {
     font-size: 14px;
 }
-input.form-control.bigInput{
-    width:300px;
+input.form-control.bigInput {
+    width: 300px;
 }
 
-.actionButton{
+.actionButton {
     min-width: 110px;
     font-size: 16px;
 }
 
-#unitsDropdown{
+#unitsDropdown {
     height: 100px;
     overflow: auto;
 }
 
-.modal img{
+.modal img {
     width: 200px;
 }
 
-a.seeMore{
-    float:none!important;
+a.seeMore {
+    float: none !important;
     color: #34495e;
 }
-a.seeMore>.fui-triangle-down{
+a.seeMore > .fui-triangle-down {
     display: inline-block;
-    margin-right:10px;
+    margin-right: 10px;
 }
-a.seeMore.closed>.fui-triangle-down{
+a.seeMore.closed > .fui-triangle-down {
     -ms-transform: rotate(-90deg); /* IE 9 */
     -webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
     transform: rotate(-90deg);
 }
 
-.hide{
+.hide {
     display: none;
 }
 
-.inlineBlock{
+.inlineBlock {
     display: inline-block;
 }
 
-.alignRight{
+.alignRight {
     text-align: right;
 }
 
-.fullWidth{
+.fullWidth {
     width: 100%;
 }
 
-#simulationSettings, #errorInfo,  #animationsSettings, #cameraAngle, #edgeVisibility, #virtualReality, #materialSettings{
+#simulationSettings,
+#errorInfo,
+#animationsSettings,
+#cameraAngle,
+#edgeVisibility,
+#virtualReality,
+#materialSettings {
     margin-top: 15px;
 }
-.modal-body img{
+.modal-body img {
     margin-left: auto;
     margin-right: auto;
-        display: block;
+    display: block;
 }
 
-.colorSwatch{
+.colorSwatch {
     display: inline-block;
     width: 20px;
     height: 10px;
@@ -579,25 +594,28 @@ a.seeMore.closed>.fui-triangle-down{
     margin-bottom: 2px;
 }
 
-#authorMoreInfo{
+#authorMoreInfo {
     display: none;
     position: absolute;
-    top:0px;
-    left:100px;
+    top: 0px;
+    left: 100px;
     z-index: 5;
 }
-#authorMoreInfo>#authorContent{
+#authorMoreInfo > #authorContent {
     font-size: 14px;
     background: #f5f5f5;
     padding: 15px 25px;
     margin-left: 20px;
-    color:#34495e;
+    color: #34495e;
     white-space: normal;
     width: 300px;
     border: 2px solid #a8a6ae;
 }
 
-#authorMoreInfo a, #authorMoreInfo a:hover,#authorMoreInfo a:visited,#authorMoreInfo a:focus{
+#authorMoreInfo a,
+#authorMoreInfo a:hover,
+#authorMoreInfo a:visited,
+#authorMoreInfo a:focus {
     color: #ec008b !important;
 }
 
@@ -606,31 +624,31 @@ a.seeMore.closed>.fui-triangle-down{
     display: block;
     position: absolute;
     top: 19px;
-    left:11px;
+    left: 11px;
     width: 20px;
     height: 20px;
     background: #f5f5f5;
-    border-left:2px solid #a8a6ae;
-    border-bottom:2px solid #a8a6ae;
+    border-left: 2px solid #a8a6ae;
+    border-bottom: 2px solid #a8a6ae;
     -ms-transform: rotate(45deg); /* IE 9 */
-     -moz-transform:rotate(45deg);
-      -webkit-transform:rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
 }
 
-#helper{
+#helper {
     display: none;
     position: absolute;
     padding: 10px 15px;
     font-size: 14px;
     background: #f5f5f5;
     margin-top: 20px;
-    opacity:0;
+    opacity: 0;
     top: 54px;
     -webkit-transition: opacity 1s; /* For Safari 3.1 to 6.0 */
     transition: opacity 1s;
     left: 140px;
-    color:#34495e;
+    color: #34495e;
     white-space: normal;
     border: 2px solid #a8a6ae;
     /*transition-timing-function: easeInOutCubic;*/
@@ -641,57 +659,60 @@ a.seeMore.closed>.fui-triangle-down{
     display: block;
     position: absolute;
     top: -12px;
-    left:105px;
+    left: 105px;
     width: 20px;
     height: 20px;
     background: #f5f5f5;
-    border-left:2px solid #a8a6ae;
-    border-top:2px solid #a8a6ae;
+    border-left: 2px solid #a8a6ae;
+    border-top: 2px solid #a8a6ae;
     -ms-transform: rotate(45deg); /* IE 9 */
-     -moz-transform:rotate(45deg);
-      -webkit-transform:rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
 }
 
-#screenCaptureModal .modal-content, #animationSetupModal .modal-content{
-    background: rgba(255,255,255,0.9);
+#screenCaptureModal .modal-content,
+#animationSetupModal .modal-content {
+    background: rgba(255, 255, 255, 0.9);
 }
 
-#recordStatus{
+#recordStatus {
     position: absolute;
-    bottom:20px;
-    width:350px;
+    bottom: 20px;
+    width: 350px;
     left: 0;
     right: 0;
     margin: 0 auto;
     z-index: 2;
     display: none;
 }
-#stopRecord{
+#stopRecord {
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
-.animationStep{
+.animationStep {
     margin: 7px 0;
     display: inline-block;
     padding: 5px 15px;
     background: #fff;
 }
-#animationSetupModal p, #animationSetupModal ul, #animationSetupModal div.btns{
+#animationSetupModal p,
+#animationSetupModal ul,
+#animationSetupModal div.btns {
     text-align: center;
     padding: 0;
 }
-.warning{
+.warning {
     color: #f1970f;
 }
 
-.red{
-    color:red!important;
+.red {
+    color: red !important;
 }
 
-#coverImg{
+#coverImg {
     z-index: 5;
     position: absolute;
     top: 0;
@@ -700,63 +721,36 @@ a.seeMore.closed>.fui-triangle-down{
     height: 100%;
 }
 
-object{
-    width:100%;
+object {
+    width: 100%;
     margin-bottom: 10px;
 }
 
-#aboutCorner{
+#aboutCorner {
     display: none;
     position: absolute;
     z-index: 6;
-    top:0;
-    right:0;
+    top: 0;
+    right: 0;
     background: rgba(40, 40, 40, 0.7);
     width: 30px;
     text-align: center;
     color: white;
 }
 
-#noSupportModal{
+#noSupportModal {
     text-align: center;
 }
 
-#tipImportSVG{
+#tipImportSVG {
     float: left;
     display: inline-block;
     margin-top: 8px;
     margin-left: 20px;
 }
 
-#feedbackNotification {
-	position: absolute;
-    z-index: 10;
-    right: 130px;
-    top: 0;
-    padding: 5px 10px 4px;
-    font-size: 15px;
-    font-weight: 900;
-    background: #ff64bf;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-}
-
-#feedbackNotification>span {
-	max-width: 150px;
-    text-align: center;
-    display: inline-block;
-	line-height: 22px;
-}
-
-@media only screen and (max-width: 1055px) {
-	#feedbackNotification {
-	  display: none;
-	}
-}
-
-@media only screen and (max-width: 890px) {
-	#feedback {
-	  display: none;
-	}
+@media only screen and (max-width: 1180px) {
+    #PackCADLink {
+        display: none;
+    }
 }
